fix: some quality improvements